--- a/2-exercise-create-modify-dictionary.ipynb
+++ b/2-exercise-create-modify-dictionary.ipynb
@@ -29,11 +29,20 @@
    "source": [
     "# Exercise: Create and modify a Python dictionary\n",
     "\n",
-    "You previously learned about Python dictionaries, which allow you to model more complex data. Dictionaries are a collection of key/value pairs, and are very common in Python programs. Their flexibility allows you to dynamically work with related values without having to create classes.\n",
+    "You previously learned about Python dictionaries, which allow you to model more complex data. Dictionaries are a collection of key/value pairs, and are very common in Python programs. Their flexibility allows you to dynamically work with related values without having to create classes or objects.\n",
+    "\n",
+    "A dictionary is indicated in Python by using curly braces (`{ }`), with key/value pairs separated by colons (`:`). Keys are string literals, and values can be of any data type.\n",
+    "\n",
+    "```python\n",
+    "demo = {\n",
+    "    'key': 'value',\n",
+    "    'number': 42\n",
+    "}\n",
+    "```\n",
     "\n",
     "For this exercise, you will create a dictionary to store information about a student. The dictionary you create will store the name, the school they attend, and their [grade point average (GPA)](https://en.wikipedia.org/wiki/Grading_in_education).\n",
     "\n",
-    "When creating the dictionary, note that GPA will be modified later by adding and subtracting values, so ensure the correct data type is used."
+    "When creating the dictionary, note that GPA will be modified later by adding and subtracting values, so ensure the correct data type is used.\n"
    ],
    "metadata": {}
   },
@@ -41,11 +50,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "# Add the code to create a new dictionary object named \"student\". Populate it with the following information:\n",
+    "# Add the code to create a new dictionary object named \"student\".\n",
+    "# Populate it with the following information:\n",
     "#\n",
-    "# Name: Riya\n",
-    "# School: Oceanside Academy\n",
-    "# GPA: 3.7\n",
+    "# name: Riya\n",
+    "# school: Oceanside Academy\n",
     "\n",
     "student = {\n",
     "    'name': 'Riya',\n",
@@ -53,6 +62,13 @@
     "}"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "To retrieve values, you can either use the `get` method or the index operator (`[ ]`) with the name of the key you wish to retrieve."
+   ],
    "metadata": {}
   },
   {
@@ -75,8 +91,19 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "You can update existing keys or create new ones by either using the `update` method or using the index operator (`[ ]`). When using `update` you pass in a new dictionary object with the updated or new values. When the index operator you specify the key name and assign a new value.\n",
+    "\n",
+    "```python\n",
+    "demo['new_key'] = 'New value'\n",
+    "```"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "source": [
     "# Add a new value with a key of 'gpa'\n",
     "# This new value should store a dictionary with the student's GPA\n",
@@ -92,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "source": [
     "# Add .1 to the student's fall GPA\n",
     "\n",
@@ -103,18 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "source": [
     "# Print the student's name with their fall GPA\n",
     "\n",
-    "print(f'{student[\"name\"]} had a {student[\"gpa\"][\"fall\"]}')"
+    "print(f'{student[\"name\"]} had a {student[\"gpa\"][\"fall\"]} in the fall')"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Riya had a 3.7\n"
+      "Riya had a 3.7 in the fall\n"
      ]
     }
    ],
